# service/src/main/java/br/com/pubfuture/finances/controller/IncomeController.java
@@ -5,8 +5,11 @@ import static java.util.concurrent.CompletableFuture.*;
 import br.com.pubfuture.finances.api.facade.IncomesApi;
 import br.com.pubfuture.finances.api.model.CreateIncomeDTO;
 import br.com.pubfuture.finances.api.model.IncomeDTO;
+import br.com.pubfuture.finances.api.model.UpdateIncomeDTO;
 import br.com.pubfuture.finances.service.IncomeService;
 import br.com.pubfuture.finances.util.ResponseEntityUtils;
+import java.time.LocalDate;
+import java.util.List;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.Executor;
 import org.springframework.http.ResponseEntity;
@@ -32,4 +35,20 @@ public class IncomeController implements IncomesApi {
         return supplyAsync(() -> incomeService.createIncome(createIncomeDTO), controllersExecutor)
             .thenApply(ResponseEntityUtils::created);
     }
+
+    @Override
+    public CompletableFuture<ResponseEntity<Void>> deleteIncome(Long id) {
+        return runAsync(() -> incomeService.deleteIncome(id), controllersExecutor).thenApply(ResponseEntityUtils::noContent);
+    }
+    //    @Override
+    //    public CompletableFuture<ResponseEntity<List<IncomeDTO>>> listIncomes(String description, LocalDate startAt, LocalDate endAt, Long idAccount, String typeIncome) {
+    //        return supplyAsync(() -> incomeService.listIncomes(description, startAt, endAt, idAccount, typeIncome), controllersExecutor)
+    //                .thenApply(ResponseEntityUtils::ok);
+    //    }
+
+    //    @Override
+    //    public CompletableFuture<ResponseEntity<Void>> updateIncome(Long id, UpdateIncomeDTO updateIncomeDTO) {
+    //        return runAsync(() -> incomeService.updateIncome(id, updateIncomeDTO), controllersExecutor)
+    //                .thenApply(ResponseEntityUtils::noContent);
+    //    }
 }
